Updated latest SE binaries 01.046.014. Temporary fix to Datagrid not allowing editing of items in Asteroid Field Generator. Fix to Repair not loading required mods. Change to Zip reader to throw more detailed exception for corrupt files. WIP on new voxel tracer. WIP on changing ore generation. Cockpit.Pilot issue resolved by recompile. Updated version number prior to release.

--- a/Main/SEToolbox/SEToolbox/Views/WindowGenerateVoxelField.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowGenerateVoxelField.xaml
@@ -134,7 +134,7 @@
                         </DataGridComboBoxColumn.EditingElementStyle>
                     </DataGridComboBoxColumn>
                     
-                    <DataGridComboBoxColumn Header="4th Material" SelectedValueBinding="{Binding ForthMaterial}" DisplayMemberPath="DisplayName">
+                    <DataGridComboBoxColumn Header="4th Material" SelectedValueBinding="{Binding FourthMaterial}" DisplayMemberPath="DisplayName">
                         <DataGridComboBoxColumn.ElementStyle>
                             <Style TargetType="ComboBox">
                                 <Setter Property="ItemsSource" Value="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.MaterialsCollection}"/>
@@ -146,7 +146,7 @@
                             </Style>
                         </DataGridComboBoxColumn.EditingElementStyle>
                     </DataGridComboBoxColumn>
-                    <DataGridComboBoxColumn Header="4th Percent" SelectedValueBinding="{Binding ForthPercent}">
+                    <DataGridComboBoxColumn Header="4th Percent" SelectedValueBinding="{Binding FourthPercent}">
                         <DataGridComboBoxColumn.ElementStyle>
                             <Style TargetType="ComboBox">
                                 <Setter Property="ItemsSource" Value="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.PercentList}"/>
